# next

./: CMakeLists.txt  instruction.md  mainwindow.ui  minimal.cpp
.github/workflows/: cmake-single-platform.yml
include/: Configuration.h  IntelHex.hpp  mainwindow.h
source/: main.cpp  mainwindow.cpp
